# igusRebelRTMove

./: diagram.drawio  readme.md  testcamera.py
armtrackingpackage/: package.xml  setup.cfg  setup.py
armtrackingpackage/armtrackingpackage/: armtracksimple.py
position_publisher/: CMakeLists.txt  package.xml
position_publisher/src/: kinect_to_position_publisher.cpp  position_publisher.cpp  position_subscriber.cpp
results/: joint_trajectory.csv  jointstates.csv  kinect_position_commands.csv
rosbag2_2025_01_28-11_44_38/: metadata.yaml  rosbag2_2025_01_28-11_44_38_0.db3
rosbag2_2025_01_28-11_46_41/: metadata.yaml  rosbag2_2025_01_28-11_46_41_0.db3
rosbag2_2025_01_28-11_47_08/: metadata.yaml  rosbag2_2025_01_28-11_47_08_0.db3
